finance-service/src/main/java/com/example/financetracker/finance/api/error/ExternalServiceException.java
package com.example.financetracker.finance.api.error;

import org.springframework.http.HttpStatus;

public class ExternalServiceException extends ApiException {

    public ExternalServiceException(String message) {
        super(HttpStatus.SERVICE_UNAVAILABLE, message);
    }
}
